Add CORS configuration and update result functionality in Google Sheets